--- a/Arithmetic/misc.ftl.tex
+++ b/Arithmetic/misc.ftl.tex
@@ -1,4 +1,55 @@
 \begin{forthel}
+  \begin{proposition}\printlabel{ARITHMETIC_13_1097950367318016}
+    Let $n$ be a natural number.
+    Assume $n \geq 5$.
+    Then \[ 2^{n} > n^{2}. \]
+  \end{proposition}
+  \begin{proof}
+    Define $\Phi = \{ n' \in \Nat_{\geq 5} \mid 2^{n'} > n'^{2} \}$.
+
+    (1) $\Phi$ contains $5$.
+    Indeed $2^{5}
+       = 2 \cdot (2 \cdot (2 \cdot (2 \cdot 2)))
+       = (5 \cdot 5) + 7.
+      > 5 \cdot 5
+      = 5^{2}$.
+    Indeed $((5 \cdot 5) + 7) > 5 \cdot 5$.
+
+    (2) For all $n' \in \Phi$ we have $n' + 1 \in \Phi$. \\
+    Proof.
+      Let $n' \in \Phi$.
+      Then $n' \geq 5$ and $2^{n'} > n'^{2}$.
+
+      (a) $2^{n'} \cdot 2 > n'^{2} \cdot 2$.
+      Indeed $2 \neq 0$.
+
+      (b) $n'^{2} \cdot 2 = n'^{2} + n'^{2}$.
+
+      (c) $n'^{2} + n'^{2} > n'^{2} + ((2 \cdot n') + 1)$.
+      Indeed $n'^{2} > (2 \cdot n') + 1$.
+
+      (d) $n'^{2} + ((2 \cdot n') + 1) = (n' + 1)^{2}$.
+
+      Take $A = 2^{n' + 1}$ and $B = (n' + 1)^{2}$. %!
+      Then
+      \[  A                                 \]
+      \[    = 2^{n' + 1}                    \]
+      \[    = 2^{n'} \cdot 2                \]
+      \[    > n'^{2} \cdot 2                \]  % (a)
+      \[    = n'^{2} + n'^{2}               \]  % (b)
+      \[    > n'^{2} + ((2 \cdot n') + 1)   \]  % (c)
+      \[    = (n' + 1)^{2}                  \]  % (d)
+      \[    = B.                            \]
+
+      Thus $2^{n' + 1} = A > B = (n' + 1)^{2}$.
+    Qed.
+
+    Therefore $\Phi$ contains every element of $\Nat_{\geq 5}$.
+    Consequently $2^{n} > n^{2}$.
+  \end{proof}
+\end{forthel}
+
+\begin{forthel}
   \begin{proposition}\printlabel{ARITHMETIC_11_8426075493236736}
     Let $n, m, k$ be natural numbers such that $n, m \neq 0$ and $k > 1$.
     Then \[ k^{n} \mid k^{m} \iff n \leq m. \]
