--- a/Arithmetic/factorial.ftl.tex
+++ b/Arithmetic/factorial.ftl.tex
@@ -1,23 +1,9 @@
-\documentclass[../arithmetic.tex]{subfiles}
-
+\documentclass{article}
 \begin{document}
-  \chapter{Factorial}\label{chapter:factorial}
-
-  \filename{arithmetic/sections/11_factorial.ftl.tex}
+  \section{Factorial}\label{sec:factorial}
 
   \begin{forthel}
-    %[prove off][check off]
-
-    [readtex \path{arithmetic/sections/19_exponentiation.ftl.tex}]
-
-    %[prove on][check on]
-  \end{forthel}
-
-
-  \section{Definition of factorial}
-
-  \begin{forthel}
-    \begin{lemma}\printlabel{ARITHMETIC_11_353784742019072}
+    \begin{lemma}\label{fac_existence}
       There exists a map $\varphi$ from $\Nat$ to $\Nat$ such that
       $\varphi(0) = 1$ and $\varphi(n + 1) = \varphi(n) \cdot (n + 1)$ for all
       $n \in \Nat$.
@@ -104,7 +90,7 @@
   \end{forthel}
 
   \begin{forthel}
-    \begin{lemma}\printlabel{ARITHMETIC_11_5176070548488192}
+    \begin{lemma}\label{fac_uniqueness}
       Let $\varphi, \varphi' : \Nat \to \Nat$.
       Assume $\varphi(0) = 1$ and $\varphi(n + 1) = \varphi(n) \cdot (n + 1)$
       for all $n \in \Nat$.
@@ -132,68 +118,4 @@
       Therefore $\varphi(n) = \varphi'(n)$ for every $n \in \Nat$.
     \end{proof}
   \end{forthel}
-
-  \begin{forthel}
-    \begin{definition}\printlabel{ARITHMETIC_11_6912805412274176}
-      $\fac$ is the map from $\Nat$ to $\Nat$ such that $\fac(0) = 1$ and
-      $\fac(n + 1) = \fac(n) \cdot (n + 1)$ for all $n \in \Nat$.
-    \end{definition}
-
-    Let $n!$ stand for $\fac(n)$.
-  \end{forthel}
-
-  \begin{forthel}
-    \begin{lemma}\printlabel{ARITHMETIC_11_5963501742850048}
-      Let $n$ be a natural number.
-      Then $n \in \dom(\fac)$.
-    \end{lemma}
-  \end{forthel}
-
-  \begin{forthel}
-    \begin{lemma}\printlabel{ARITHMETIC_11_8076250486669312}
-      Let $n$ be a natural number.
-      Then $n! \in \Nat$.
-    \end{lemma}
-  \end{forthel}
-
-  \begin{forthel}
-    \begin{lemma}\printlabel{ARITHMETIC_11_1159827327811584}
-      $0! = 1$.
-    \end{lemma}
-  \end{forthel}
-
-
-  \section{Basic properties}
-
-  \begin{forthel}
-    \begin{lemma}\printlabel{ARITHMETIC_11_7831802427211776}
-      Let $n$ be a natural number.
-      Then \[ (n + 1)! = n! \cdot (n + 1) \]
-      and \[ (n + 1)! = (n + 1) \cdot n!. \]
-    \end{lemma}
-  \end{forthel}
-
-  \begin{forthel}
-    \begin{proposition}\printlabel{ARITHMETIC_11_6123519005949952}
-      Let $n$ be a natural number.
-      Then $n! \neq 0$.
-    \end{proposition}
-    \begin{proof}
-      Define \[ \Phi = \class{n' \in \Nat | n'! \neq 0}. \]
-
-      (1) $\Phi$ contains $0$.
-      Indeed $0! = 1 \neq 0$.
-
-      (2) For all $n' \in \Phi$ we have $n' + 1 \in \Phi$. \\
-      Proof.
-        Let $n' \in \Phi$.
-        We have $(n' + 1)! = (n' + 1) \cdot n'!$.
-        $n' + 1$ and $n'!$ are nonzero.
-        Hence $(n' + 1)! \neq 0$.
-      Qed.
-
-      Thus $\Phi$ contains every natural number.
-      Therefore $n! \neq 0$.
-    \end{proof}
-  \end{forthel}  
 \end{document}
